maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:6: error: not found: value NORTH
    if ( isDirectionFree(NORTH) && sommeAngle == 0 ){
                         ^